# echomine

./: .gitignore  .pre-commit-config.yaml  404.html  ACCEPTANCE_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_STRUCTURE.md  README.md  REMAINING_WORK.md  TEST_REPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  validate_acceptance.py
.claude/: agents.md
.claude/agents/: cli-ux-designer.md  git-version-control.md  multi-provider-adapter-architect.md  performance-profiling-specialist.md  pydantic-data-modeling-expert.md  python-strict-typing-enforcer.md  search-ranking-engineer.md  software-architect.md  streaming-parser-specialist.md  tdd-test-strategy-engineer.md  technical-documentation-specialist.md
.github/workflows/: codeql.yml  docs.yml  release.yml  security.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
api/: index.html
api/adapters/claude/: index.html
api/adapters/openai/: index.html
api/adapters/protocols/: index.html
api/cli/commands/: index.html
api/models/content_types/: index.html
api/models/conversation/: index.html
api/models/message/: index.html
api/models/search/: index.html
api/search/ranking/: index.html
api/utils/asset_resolver/: index.html
architecture/: index.html
cli-usage/: index.html
contributing/: index.html
dev/bench/: data.js
development/: index.html
development/adr-timestamp-handling/: index.html
development/documentation/: index.html
development/setup/: index.html
development/testing/: index.html
development/type-checking/: index.html
development/workflows/: index.html
docs/: README.md  architecture.md  cli-usage.md  contributing.md  index.md  installation.md  library-usage.md  quickstart.md  timestamp_handling_guide.md
docs/api/: index.md
docs/api/cli/: commands.md
docs/api/models/: conversation.md  message.md  search.md
docs/development/: setup.md  testing.md
docs/maintaining/: pypi-publishing.md
examples/: batch_processing.py  cognivault_integration.py  rate_limiting.py  search_then_export.sh  timestamp_handling.py
installation/: index.html
library-usage/: index.html
maintaining/: index.html
maintaining/pypi-publishing/: index.html
maintaining/release-process/: index.html
maintaining/versioning/: index.html
quickstart/: index.html
search/: search_index.json
specs/001-ai-chat-parser/: data-model.md  gap-resolution-p1.md  gap-resolution-p2.md  gap-resolution.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-ai-chat-parser/checklists/: phase-6-7-gap-audit.md  phase3-resolutions.md  remaining-gaps-prioritization.md  requirements.md
specs/001-ai-chat-parser/contracts/: cli_spec.md  conversation_provider_protocol.py
specs/001-ai-chat-parser/implementation/: phase-6-export.md
specs/002-advanced-search/: plan.md  research.md  spec.md
src/echomine/: __init__.py  exceptions.py  statistics.py
src/echomine/adapters/: __init__.py  claude.py  openai.py
src/echomine/cli/: app.py  formatters.py
src/echomine/cli/commands/: __init__.py  export.py  get.py  list.py  search.py  stats.py
src/echomine/export/: __init__.py  markdown.py
src/echomine/models/: __init__.py  conversation.py  image.py  message.py  protocols.py  search.py
src/echomine/search/: __init__.py  ranking.py
src/echomine/utils/: logging.py
tests/: EXPORT_CLI_TEST_SUMMARY.md  TEST_DESIGN_EXPORT_CLI.md  TEST_STRATEGY_T026-T028.md  TEST_STRATEGY_T044-T047.md  TEST_SUMMARY_DATE_ONLY_FILTERING.md  conftest.py
tests/contract/: test_cli_app_contract.py  test_cli_app_version_help.py  test_cli_contract.py  test_cli_export_contract.py  test_cli_export_errors.py  test_cli_export_json.py  test_cli_get_contract.py  test_cli_search_errors.py  test_cli_search_exclude.py  test_cli_search_match_mode.py  test_cli_search_phrase.py  test_cli_search_role.py  test_cli_search_snippet.py  test_date_only_filtering_contract.py  test_fr_baseline.py  test_list_limit_contract.py  test_provider_protocol.py  test_us3_as1_export_by_title.py
tests/fixtures/: generate_large_export.py
tests/fixtures/golden_master/001_simple_text/: expected.md  raw.json
tests/fixtures/golden_master/002_with_images/: expected.md  raw.json
tests/fixtures/golden_master/003_with_code/: expected.md  raw.json
tests/integration/: test_date_filtering.py  test_export_flow.py  test_get_methods.py  test_golden_master.py  test_library_api.py  test_list_flow.py  test_search_combined.py  test_search_exclude.py  test_search_flow.py  test_search_match_mode.py  test_search_message_count.py  test_search_phrase.py  test_search_snippet.py  test_statistics_streaming.py
tests/performance/: test_advanced_search_benchmark.py  test_list_benchmark.py  test_search_benchmark.py
tests/unit/: test_asset_resolver.py  test_claude_adapter.py  test_claude_adapter_coverage.py  test_cleanup.py  test_cli_commands.py  test_cli_coverage.py  test_cli_search_coverage.py  test_concurrency.py  test_export_title_lookup.py  test_formatters.py  test_get_formatters.py  test_list_limit_unit.py  test_list_search_stats_coverage.py  test_logging.py  test_markdown_metadata.py  test_openai_adapter.py  test_search_query.py  test_search_query_date_only.py  test_statistics_functions.py  test_type_contracts.py
tests/unit/cli/: test_provider_detection.py
tests/unit/models/: test_conversation.py
tests/unit/search/: test_bm25_edge_cases.py  test_role_filter.py  test_snippet.py
